user/logs/stride-200927_093816.log
TTLocalizer: Running in language: English
OTPLocalizer: Running in language: English
Traceback (most recent call last):
  File "C:\Panda3D-1.10.0\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "C:\Panda3D-1.10.0\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "C:\Users\Cool Cat\Documents\GitHub\Toontown-Mystery-the-Game-\toontown\toonbase\ToontownStart.py", line 131, in <module>
    import ToonBase
  File "toontown\toonbase\ToonBase.py", line 317
    gameServer = '25.57.238.215'
    ^
IndentationError: unexpected indent
